start refactoring server
